# blankenhain

./: .gitignore  .gitmodules  AlignedType.cpp  AlignedType.h  AuxFunc.cpp  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  FloatParameter.cpp  FloatParameter.h  NormalizedRange.h  README.md  Sample.h  UpDownSampling.cpp  bh2_base.h  bh2_bitcrush.cpp  bh2_bitcrush.h  bh2_compressor.cpp  bh2_compressor.h  bh2_delay.cpp  bh2_delay.h  bh2_distortion.cpp  bh2_distortion.h  bh2_equalizer.cpp  bh2_equalizer.h  bh2_example.cpp  bh2_example.h  bh2_filter.cpp  bh2_filter.h  bh2_pan.cpp  bh2_pan.h  bh2_volume.cpp  bh2_volume.h  build_all_plugins.ps1  processFunctions.h  vstplugmain.cpp
Projekt1/: Project1.def  Projekt1.sln
example/: CMakeLists.txt  Example.cpp  Input.inl
libblankenhain/: .CMakeLists.txt.swp  CMakeLists.txt
libblankenhain/include/: AbletonTrackMixerVolumeEffect.h  AlignedType.h  ArpMidiEffect.h  AuxFunc.h  Basedrum1Instrument.h  BhMath.h  BitcrushEffect.h  ChorusEffect.h  CircularBuffer.h  CompressorEffect.h  Constants.h  DelayEffect.h  DistortionEffect.h  EffectBase.h  EnvelopeFollower.h  EqualizerEffect.h  ExampleEffect.h  ExampleInstrument.h  Filter.h  FilterEffect.h  FloatParameter.h  FmInstrument.h  FpuState.h  GeneralEffectBase.h  InstrumentBase.h  InterpolatedValue.h  InversePhaseEffect.h  LimiterEffect.h  MidiBase.h  MidiEvent.h  ModulationEnvelope.h  MonosynthInstrument.h  NoiseGateEffect.h  NormalizedRange.h  OnePoleFilter.h  Options.h  Oscillator.h  Oscillators.h  PanEffect.h  ParameterBundle.h  (+23 more)
libblankenhain/src/: AbletonTrackMixerVolumeEffect.cpp  AlignedType.cpp  ArpMidiEffect.cpp  AuxFunc.cpp  Basedrum1Instrument.cpp  BhMath.cpp  BitcrushEffect.cpp  ChorusEffect.cpp  CircularBuffer.cpp  CompressorEffect.cpp  DelayEffect.cpp  DistortionEffect.cpp  EffectBase.cpp  EnvelopeFollower.cpp  EqualizerEffect.cpp  ExampleEffect.cpp  ExampleInstrument.cpp  Filter.cpp  FilterEffect.cpp  FloatParameter.cpp  FmInstrument.cpp  FpuState.cpp  GeneralEffectBase.cpp  InstrumentBase.cpp  InterpolatedValue.cpp  InversePhaseEffect.cpp  LimiterEffect.cpp  MidiBase.cpp  MonosynthInstrument.cpp  NoiseGateEffect.cpp  NormalizedRange.cpp  OnePoleFilter.cpp  Oscillator.cpp  Oscillators.cpp  PanEffect.cpp  ParameterBundle.cpp  PolyBLEPOscillator.cpp  PolysynthInstrument.cpp  ReverbEffect.cpp  RhythmgateEffect.cpp  (+16 more)
parser/: alsparser.py  bh2test.als  config.py  dls.py
player/: CMakeLists.txt
player/include/: BlankenhainPlayer.h  ChainDevice.h  CombinedDevice.h  Device.h  EffectDevice.h  GroupDevice.h  InstrumentDevice.h  MidiDevice.h  MidiTrack.h  ParameterTrack.h  ReturnDevice.h  SendDevice.h  Song.h  SongInfo.h
player/src/: BlankenhainPlayer.cpp  ChainDevice.cpp  CombinedDevice.cpp  Device.cpp  EffectDevice.cpp  GroupDevice.cpp  InstrumentDevice.cpp  MidiDevice.cpp  MidiTrack.cpp  ParameterTrack.cpp  ReturnDevice.cpp  SendDevice.cpp  Song.cpp  SongInfo.cpp
plugins/: CMakeLists.txt
plugins/include/: ImguiCustomFunctions.h  ImguiEffectEditor.h  InstrumentPluginBase.h  MidiEvent.h  MidiPluginBase.h  PluginBase.h  PluginParameterBundle.h  bh2_base.h
plugins/src/: ArpPlugin.cpp  ArpPlugin.h  BitcrushPlugin.cpp  BitcrushPlugin.h  ChorusPlugin.cpp  ChorusPlugin.h  ChorusPluginEditor.cpp  ChorusPluginEditor.h  CompressorPlugin.cpp  CompressorPlugin.h  CompressorPluginEditor.cpp  CompressorPluginEditor.h  DelayPlugin.cpp  DelayPlugin.h  DelayPluginEditor.cpp  DelayPluginEditor.h  DistortionPlugin.cpp  DistortionPlugin.h  DistortionPluginEditor.cpp  DistortionPluginEditor.h  EqualizerPlugin.cpp  EqualizerPlugin.h  EqualizerPluginEditor.cpp  EqualizerPluginEditor.h  ExampleInstrumentPlugin.cpp  ExampleInstrumentPlugin.h  ExamplePlugin.cpp  ExamplePlugin.h  ExamplePluginEditor.cpp  ExamplePluginEditor.h  FilterPlugin.cpp  FilterPlugin.h  FilterPluginEditor.cpp  FilterPluginEditor.h  ImguiEffectEditor.cpp  ImguiFrameCallback.h  ImguiVstguiView.cpp  ImguiVstguiView.h  InstrumentPluginBase.cpp  InversePhasePlugin.cpp  (+84 more)
soundtrack/: BhSoundtrack.cpp  CMakeLists.txt  Input.inl
synth/: juce_module_info  synth.cpp  synth.h
synth/src/: AdsrEnvelope.cpp  AdsrEnvelope.h  AlignedType.cpp  AlignedType.h  CircularBuffer.cpp  FPUState.h  Filter.cpp  Filter.h  KickSynth.cpp  KickSynth.h  NormalizedRange.cpp  NormalizedRange.h  Sample.h  UpDownSampling.cpp  UpDownSampling.h  processFunctions.cpp  processFunctions.h
test/: CMakeLists.txt  tests.cpp
tools/libgig_based_dls_parser/: DLS.cpp  DLS.h  RIFF.cpp  RIFF.h  helper.h  main.cpp
tools/libgig_based_dls_parser/dls_parser/: dls_parser.sln
tools/libgig_based_dls_parser/dls_parser/dls_parser/: dls_parser.vcxproj
vst/: .gitignore  Blankenhain.jucer  README.md
vst/Builds/: .gitignore
vst/Builds/Bitcrush/VisualStudio2015/: Blankenhain.vcxproj  Blankenhain.vcxproj.filters
vst/Builds/Compressor/VisualStudio2015/: Blankenhain.vcxproj
vst/Builds/ExamplePlugin/LinuxMakefile/: Makefile
vst/Builds/ExamplePlugin/VisualStudio2015/: Blankenhain.sdf  Blankenhain.sln  Blankenhain.vcxproj  Blankenhain.vcxproj.filters  resources.rc
vst/Builds/Filter/LinuxMakefile/: Makefile
vst/Builds/Filter/VisualStudio2015/: Blankenhain.sln  Blankenhain.vcxproj  Blankenhain.vcxproj.filters
vst/Builds/Kick/VisualStudio2015/: Blankenhain.vcxproj  (+1 more)
vst/JuceLibraryCode/: AppConfig.h  JuceHeader.h
vst/Source/: AuxFunc.cpp  AuxFunc.h  BlankenhainAudioProcessor.cpp  BlankenhainAudioProcessor.h  BoolParameter.cpp  BoolParameter.h  CircularBuffer.cpp  CircularBuffer.h  CreateFilter.cpp  FloatParameter.cpp  FloatParameter.h  SkewingParameter.cpp  SkewingParameter.h
vst/Source/components/: AdsrComponent.cpp  AdsrComponent.h  LfoComponent.cpp  LfoComponent.h  MeterComponent.cpp  MeterComponent.h  MeterComponent2.cpp  MeterComponent2.h  MeterComponent3.cpp  MeterComponent3.h  ModulationMatrixComponent.cpp  ModulationMatrixComponent.h  WaveGenerationComponent.cpp  WaveGenerationComponent.h  WaveVerschwurbelungComponent.cpp  WaveVerschwurbelungComponent.h  ledMeterComponent.cpp  ledMeterComponent.h
wavewriter/: CMakeLists.txt  Wavewriter.cpp
(+66 files in other folders)
