cmake_minimum_required(VERSION 3.6)
project(blankenhain2)

add_compile_options(/arch:SSE2)
# link-time code generation disabled for compile speed
# add_compile_options(/GL)

string(REGEX REPLACE "/EHsc" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
string(REGEX REPLACE "/RTC1" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")

set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
set(CMAKE_CXX_FLAGS_RELEASE_NOSTL "${CMAKE_CXX_FLAGS_RELEASE} /Zl /GS- /Gs9999999 /QIfist /GR- /Oy-")
set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /MT")
set(CMAKE_CXX_FLAGS_MINSIZEREL_NOSTL "${CMAKE_CXX_FLAGS_MINSIZEREL} /Zl /GS- /Gs9999999 /QIfist /GR- /Oy-")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
set(CMAKE_CXX_FLAGS_DEBUG_NOSTL "${CMAKE_CXX_FLAGS_DEBUG} /Zl /GS- /Gs9999999 /QIfist /GR- /Oy-")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MTd")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO_NOSTL "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /Zl /GS- /Gs9999999 /QIfist /GR- /Oy-")

set(CMAKE_SHARED_LINKER_FLAGS_RELEASE_NOSTL "${CMAKE_SHARED_LINKER_FLAGS_RELEASE}")
set(CMAKE_SHARED_LINKER_FLAGS_DEBUG_NOSTL "${CMAKE_SHARED_LINKER_FLAGS_DEBUG}")
set(CMAKE_SHARED_LINKER_FLAGS_MINSIZEREL_NOSTL "${CMAKE_SHARED_LINKER_FLAGS_MINSIZEREL}")
set(CMAKE_SHARED_LINKER_FLAGS_RELWITHDEBINFO_NOSTL "${CMAKE_SHARED_LINKER_FLAGS_RELWITHDEBINFO}")

set(CMAKE_EXE_LINKER_FLAGS_RELEASE_NOSTL "${CMAKE_EXE_LINKER_FLAGS_RELEASE}")
set(CMAKE_EXE_LINKER_FLAGS_DEBUG_NOSTL "${CMAKE_EXE_LINKER_FLAGS_DEBUG}")
set(CMAKE_EXE_LINKER_FLAGS_MINSIZEREL_NOSTL "${CMAKE_EXE_LINKER_FLAGS_MINSIZEREL}")
set(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO_NOSTL "${CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO}")

list(APPEND CMAKE_CONFIGURATION_TYPES Release_noSTL)
list(APPEND CMAKE_CONFIGURATION_TYPES MinSizeRel_noSTL)
list(APPEND CMAKE_CONFIGURATION_TYPES Debug_noSTL)
list(APPEND CMAKE_CONFIGURATION_TYPES RelWithDebInfo_noSTL)
list(REMOVE_DUPLICATES CMAKE_CONFIGURATION_TYPES)

set(CMAKE_CONFIGURATION_TYPES "${CMAKE_CONFIGURATION_TYPES}" CACHE STRING "Add the configurations that we need" FORCE)

add_subdirectory("libblankenhain")
add_subdirectory("plugins")
add_subdirectory("player")
add_subdirectory("soundtrack")
add_subdirectory("wavewriter")
add_subdirectory("test")
