cmake_minimum_required(VERSION 3.6)
project(libblankenhain)

# utility
function(prepend var prefix)
	set(stringsWithPrefix "")
	foreach(x ${ARGN})
		list(APPEND stringsWithPrefix "${prefix}/${x}")
	endforeach(x)
	set(${var} "${stringsWithPrefix}" PARENT_SCOPE)
endfunction(prepend)

prepend(HEADERS "include/"
	"AbletonTrackMixerVolumeEffect.h"
	"AlignedType.h"
	"ArpMidiEffect.h"
	"AuxFunc.h"
	"Basedrum1Instrument.h"
	"BitcrushEffect.h"
	"BhMath.h"
	"ChorusEffect.h"
	"CircularBuffer.h"
	"CompressorEffect.h"
	"Constants.h"
	"DelayEffect.h"
	"DistortionEffect.h"
	"EffectBase.h"
	"EnvelopeFollower.h"
	"EqualizerEffect.h"
	"ExampleEffect.h"
	"ExampleInstrument.h"
	"Filter.h"
	"FilterEffect.h"
	"FloatParameter.h"
	"FmInstrument.h"
	"FpuState.h"
	"FreeverbEffect.h"
	"GlidePolyblepInstrument.h"
	"GmSoundRegion.h"
	"GmInstrument.h"
	"GmSound.h"
	"GmsynthInstrument.h"
	"InstrumentBase.h"
	"InterpolatedValue.h"
	"InversePhaseEffect.h"
	"LimiterEffect.h"
	"MidiBase.h"
	"MidiEvent.h"
	"ModulationEnvelope.h"
	"NoiseGateEffect.h"
	"NormalizedRange.h"
	"OnePoleFilter.h"
	"Options.h"
	"Oscillators.h"
	"ParameterBundle.h"
	"pitchshiftMidiEffect.h"
	"polyblepInstrument.h"
	"RhythmgateEffect.h"
	"Sample.h"
	"SoundFonts.h"
	"UpDownSampling.h"
	"VoiceState.h"
	"VolumeEffect.h"
	"Warnings.h"
	"WavetableInstrument.h"
	"WidthEffect.h"
)

prepend(SOURCES "src/"
	"AbletonTrackMixerVolumeEffect.cpp"
	"AlignedType.cpp"
	"ArpMidiEffect.cpp"
	"AuxFunc.cpp"
	"Basedrum1Instrument.cpp"
	"BitcrushEffect.cpp"
	"BhMath.cpp"
	"ChorusEffect.cpp"
	"CircularBuffer.cpp"
	"CompressorEffect.cpp"
	"DelayEffect.cpp"
	"DistortionEffect.cpp"
	"EffectBase.cpp"
	"EnvelopeFollower.cpp"
	"EqualizerEffect.cpp"
	"ExampleEffect.cpp"
	"ExampleInstrument.cpp"
	"Filter.cpp"
	"FilterEffect.cpp"
	"FloatParameter.cpp"
	"FmInstrument.cpp"
	"FpuState.cpp"
	"FreeverbEffect.cpp"
	"GlidePolyblepInstrument.cpp"
	"GmInstrument.cpp"
	"GmSound.cpp"
	"GmsynthInstrument.cpp"
	"InstrumentBase.cpp"
	"InterpolatedValue.cpp"
	"InversePhaseEffect.cpp"
	"LimiterEffect.cpp"
	"MidiEvent.cpp"
	"MidiBase.cpp"
	"NoiseGateEffect.cpp"
	"NormalizedRange.cpp"
	"OnePoleFilter.cpp"
	"Oscillators.cpp"
	"ParameterBundle.cpp"
	"pitchshiftMidiEffect.cpp"
	"polyblepInstrument.cpp"
	"RhythmgateEffect.cpp"
	"Sample.cpp"
	"UpDownSampling.cpp"
	"VoiceState.cpp"
	"VolumeEffect.cpp"
	"WavetableInstrument.cpp"
	"WidthEffect.cpp"
)

include_directories("include")
add_library(libblankenhain STATIC ${HEADERS} ${SOURCES})

# Group items into folders for less crowded folder viewing experience
# via //http://stackoverflow.com/questions/7091385/how-to-organise-my-files-using-cmake
source_group(Effects REGULAR_EXPRESSION .*Effect.*)
source_group(Instruments REGULAR_EXPRESSION .*Instrument.*)
